--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,11 @@
   </head>
 
   <body>
-
+  
     <h1>💖 Hello World!</h1>
     <p>Welcome to your Electron application.</p>
 
-    <h1>IT WORKED</h1>
+    <h1>IT WORKED AGAIN</h1>
 
   </body>
 </html>
