--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,7 @@
     <h1>💖 Hello World!</h1>
     <p>Welcome to your Electron application.</p>
 
-<<<<<<< HEAD
-    <h1>pink yellow umbrella</h1>
-=======
-    <h1>chicken</h1>
->>>>>>> 0ef3c7b4ba642359343931eac4d9b01e1813488a
+    <h1>the third owl</h1>
 
   </body>
 </html>
