--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 
   <body>
   
-    <h1>💖 Hello World!</h1>
+    <h1>valorant is cool</h1>
     <p>Welcome to your Electron application.</p>
 
     <h1>i wanna sleep</h1>
