--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <h1>valorant is cool</h1>
     <p>Welcome to your Electron application.</p>
 
-    <h1>This change is amazin</h1>
+    <h1>I play cypher and phoenix</h1>
 
   </body>
 </html>
