--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,7 @@
 
   <body>
   
-    <h1>valorant is cool</h1>
-    <p>Welcome to your Electron application.</p>
-
-    <h1>I play cypher and phoenix</h1>
-    <h1>Sonny's change</h1>
+    <h1>My name is bob</h1>
 
   </body>
 </html>
