random page dynamics

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,15 @@
 
   <body>
   
-    <h1>ima play cards of humanity</h1>
+    <div id="homePage">
+      <h3 id="homePageTitle" >homePage</h3>
+      <h3>blahblah</h3>
+    </div>
+
+    <div id="menuPage">
+      <button id="hideButton">hide</button>
+    </div>
 
   </body>
+  <script src="page.js"></script>
 </html>
