text-align: center not working

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <body>
   
     <div id="homePage">
-      <h3 id="homePageTitle" >homePage</h3>
+      <h3 id="homePageTitle" >BookMark</h3>
       <h3>blahblah</h3>
     </div>
 
