--- a/src/index.html
+++ b/src/index.html
@@ -9,15 +9,16 @@
 
   <body>
   
-    <div id="homePage">
+    <div id="topRed">
       <h3 id="homePageTitle" >BookMark</h3>
-      <h3>blahblah</h3>
+      <hr>
     </div>
 
-    <div id="menuPage">
-      <button id="hideButton">hide</button>
+    <div id="centerBlue">
+      <h3 id="blueTitle">Your Books</h3>
+      <button id="addReading">Add Reading</button>
     </div>
-    <h1>ima play cards</h1>
+    
 
   </body>
   <script src="page.js"></script>
