--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <title>BookMark App</title>
     <link rel="stylesheet" href="index.css">
   </head>
 
