did some experimenting

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 
     <div id="centerBlue">
       <h3 id="blueTitle">Your Books</h3>
-      <hr>
+      <h3 id="blueTitleUnderLine">_____________</h3>
       <button id="addReading">Add Reading</button>
     </div>
     
