basic look changed, menu button added  (no functionality yet)

--- a/src/index.html
+++ b/src/index.html
@@ -5,19 +5,30 @@
     <meta charset="UTF-8">
     <title>Hello World!</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Comfortaa' rel='stylesheet'>
   </head>
 
   <body>
   
     <div id="homePage">
-      <h3 id="homePageTitle" >BookMark</h3>
-      <h3>blahblah</h3>
-    </div>
 
-    <div id="menuPage">
-      <button id="hideButton">hide</button>
+      <div class="header">
+
+        <a role="button" id="menuOpener">
+          <span>
+            <i class="fa fa-bars" aria-hidden="true"></i>
+          </span>
+        </a>
+
+        <p id="homePageTitle">BookMark</p>
+      </div>
+      
+      <div class="mainBody">
+
+      </div>
+
     </div>
-    <h1>ima play cards</h1>
 
   </body>
   
