button and title

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,8 @@
 
         <p id="homePageTitle">BookMark</p>
       </div>
-      
+        <h3 id="booksTitle">Your Books</h3>
+        <button type="button" id="addReadingButton">Add Reading</button>
       <div class="mainBody">
         
       </div>
