i tried making a divider but failed

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,9 @@
         
       <div class="mainBody">
         <h3 id="booksTitle">Your Books</h3>
+        <div class ="line">
+          
+        </div>
         <button type="button" id="addReadingButton">Add Reading</button>
       </div>
 
