--- a/src/index.html
+++ b/src/index.html
@@ -26,10 +26,7 @@
         
       <div class="mainBody">
         <h3 id="booksTitle">Your Books</h3>
-        <div class ="line">
-          
-        </div>
-        <button type="button" id="addReadingButton">Add Reading</button>
+        <button type="button" id="addReadingButton">Add Reading +</button>
       </div>
 
     </div>
